@@ -2,11 +2,10 @@ package org.assimbly.util;
 
 import org.jasypt.encryption.pbe.StandardPBEStringEncryptor;
 import org.jasypt.iv.RandomIvGenerator;
-import org.jspecify.annotations.NonNull;
 
 import javax.crypto.Cipher;
 import javax.crypto.SecretKeyFactory;
-import javax.crypto.spec.GCMParameterSpec;
+import javax.crypto.spec.IvParameterSpec;
 import javax.crypto.spec.PBEKeySpec;
 import javax.crypto.spec.SecretKeySpec;
 import java.nio.charset.StandardCharsets;
@@ -16,48 +15,17 @@ import java.util.Base64;
 public final class EncryptionUtil {
 
     private final StandardPBEStringEncryptor textEncryptor = new StandardPBEStringEncryptor();
-    private final SecureRandom secureRandom = new SecureRandom();
+    private static final int SALT_LENGTH = 16; // Length of the salt in bytes
+    private static final int IV_LENGTH = 16; // Length of the IV in bytes
+    private static String password;
 
-    private static final int SALT_LENGTH = 16;
-    private static final int IV_LENGTH = 16;
+    private static final SecureRandom secureRandom = new SecureRandom();
 
-    // Private fields instead of public static
-    private final String password;
-    private final String algorithm;
-
-    // Constructor that requires all necessary parameters
     public EncryptionUtil(String password, String algorithm) {
-        if (password == null || password.trim().isEmpty()) {
-            throw new IllegalArgumentException("Password cannot be null or empty");
-        }
-        if (algorithm == null || algorithm.trim().isEmpty()) {
-            throw new IllegalArgumentException("Algorithm cannot be null or empty");
-        }
-
         this.password = password;
-        this.algorithm = algorithm;
-
         this.textEncryptor.setPassword(password);
         this.textEncryptor.setAlgorithm(algorithm);
         this.textEncryptor.setIvGenerator(new RandomIvGenerator());
-    }
-
-    // Factory method for creating instances from environment properties
-    public static EncryptionUtil fromEnvironment(String passwordProperty, String algorithmProperty) {
-        if (passwordProperty == null || algorithmProperty == null) {
-            throw new IllegalArgumentException("Environment properties cannot be null");
-        }
-        return new EncryptionUtil(passwordProperty, algorithmProperty);
-    }
-
-    // Getters (no setters to maintain immutability)
-    public String getAlgorithm() {
-        return algorithm;
-    }
-
-    // Don't expose the password for security reasons
-    public boolean isPasswordSet() {
-        return password != null && !password.trim().isEmpty();
     }
 
     public StandardPBEStringEncryptor getTextEncryptor() {
@@ -65,10 +33,6 @@ public final class EncryptionUtil {
     }
 
     public String encrypt(String plainText) {
-        if (plainText == null) {
-            throw new IllegalArgumentException("Plain text cannot be null");
-        }
-
         // If the value is already encrypted, do not encrypt again and return
         if (plainText.startsWith("ENC(") && plainText.endsWith(")")) {
             return plainText;
@@ -95,11 +59,20 @@ public final class EncryptionUtil {
         String encodedEncryptedText = encoder.encodeToString(encryptedBytes);
 
         // Concatenate and return
-        return "ENC(%s|%s|%s)".formatted(encodedSalt, encodedIv, encodedEncryptedText);
+        return String.format("ENC(%s|%s|%s)", encodedSalt, encodedIv, encodedEncryptedText);
     }
 
     public String decrypt(String encryptedText) {
-        String[] parts = getStrings(encryptedText);
+        // Validate and extract components
+        if (!encryptedText.startsWith("ENC(") || !encryptedText.endsWith(")")) {
+            throw new IllegalArgumentException("Invalid encrypted text format.");
+        }
+
+        String contents = encryptedText.substring(4, encryptedText.length() - 1);
+        String[] parts = contents.split("\\|");
+        if (parts.length != 3) {
+            throw new IllegalArgumentException("Invalid encrypted text format.");
+        }
 
         Base64.Decoder decoder = Base64.getDecoder();
         byte[] salt = decoder.decode(parts[0]);
@@ -113,27 +86,10 @@ public final class EncryptionUtil {
         return decryptWithIv(secretKey, iv, encryptedBytes);
     }
 
-    private static String @NonNull [] getStrings(String encryptedText) {
-        if (encryptedText == null) {
-            throw new IllegalArgumentException("Encrypted text cannot be null");
-        }
-
-        // Validate and extract components
-        if (!encryptedText.startsWith("ENC(") || !encryptedText.endsWith(")")) {
-            throw new IllegalArgumentException("Invalid encrypted text format.");
-        }
-
-        String contents = encryptedText.substring(4, encryptedText.length() - 1);
-        String[] parts = contents.split("\\|");
-        if (parts.length != 3) {
-            throw new IllegalArgumentException("Invalid encrypted text format.");
-        }
-        return parts;
-    }
 
     private byte[] generateKey(String password, byte[] salt) {
         try {
-            PBEKeySpec spec = new PBEKeySpec(password.toCharArray(), salt, 10000, 256);
+            PBEKeySpec spec = new PBEKeySpec(password.toCharArray(), salt, 10000, 256); // 10000 iterations, 256 bits
             SecretKeyFactory factory = SecretKeyFactory.getInstance("PBKDF2WithHmacSHA1");
             return factory.generateSecret(spec).getEncoded();
         } catch (Exception e) {
@@ -143,13 +99,10 @@ public final class EncryptionUtil {
 
     private byte[] encryptWithIv(SecretKeySpec secretKey, byte[] iv, String plainText) {
         try {
-            Cipher cipher = Cipher.getInstance("AES/GCM/NoPadding");
-            // Use GCMParameterSpec instead of IvParameterSpec
-            // 128 is the authentication tag length in bits
-            GCMParameterSpec spec = new GCMParameterSpec(128, iv);
-
-            cipher.init(Cipher.ENCRYPT_MODE, secretKey, spec);
-            return cipher.doFinal(plainText.getBytes(StandardCharsets.UTF_8));
+            Cipher cipher = Cipher.getInstance("AES/CBC/PKCS5Padding");
+            IvParameterSpec ivParams = new IvParameterSpec(iv);
+            cipher.init(Cipher.ENCRYPT_MODE, secretKey, ivParams);
+            return cipher.doFinal(plainText.getBytes(StandardCharsets.UTF_8)); // Use UTF-8 encoding
         } catch (Exception e) {
             throw new RuntimeException("Encryption failed.", e);
         }
@@ -157,17 +110,14 @@ public final class EncryptionUtil {
 
     private String decryptWithIv(SecretKeySpec secretKey, byte[] iv, byte[] encryptedBytes) {
         try {
-            Cipher cipher = Cipher.getInstance("AES/GCM/NoPadding");
-            // Must match the tag length used during encryption (128)
-            GCMParameterSpec spec = new GCMParameterSpec(128, iv);
-
-            cipher.init(Cipher.DECRYPT_MODE, secretKey, spec);
+            Cipher cipher = Cipher.getInstance("AES/CBC/PKCS5Padding");
+            IvParameterSpec ivParams = new IvParameterSpec(iv);
+            cipher.init(Cipher.DECRYPT_MODE, secretKey, ivParams);
             byte[] decryptedBytes = cipher.doFinal(encryptedBytes);
-            return new String(decryptedBytes, StandardCharsets.UTF_8);
+            return new String(decryptedBytes, StandardCharsets.UTF_8); // Use UTF-8 encoding
         } catch (Exception e) {
             throw new RuntimeException("Decryption failed.", e);
         }
     }
 
-    
 }
